Implemented update and delete functionalities of the GUI

--- a/interns-app/src/app/components/edit-intern/edit-intern.component.html
+++ b/interns-app/src/app/components/edit-intern/edit-intern.component.html
@@ -1,4 +1,4 @@
-<h1>Add an intern</h1>
+<h1>Edit an intern</h1>
 <label>Name</label>
 <form [formGroup]="form">
   <mat-form-field>
@@ -41,4 +41,4 @@
     ></textarea>
   </mat-form-field>
 </form>
-<button mat-button (click)="addIntern()" routerLink="">Add</button>
+<button mat-button (click)="editIntern()" routerLink="">Add</button>
