--- a/interns-app/src/app/components/add-tool/add-tool.component.scss
+++ b/interns-app/src/app/components/add-tool/add-tool.component.scss
@@ -1,6 +1,6 @@
 .add-intern-card {
-    width: 150px;
-    min-height: 150px;
+    width: 200px;
+    height: 200px;
     margin-top: 25px;
     margin-left: 25px;
     margin-right: 25px;
