--- a/interns-app/src/app/components/interns/interns.component.html
+++ b/interns-app/src/app/components/interns/interns.component.html
@@ -7,7 +7,12 @@
     {{ intern.name }}
   </mat-card-header>
   <mat-card-content>
+      Age: <br>
     {{ intern.age }}
+  </mat-card-content>
+  <mat-card-content>
+      Date of birth:<br>
+    {{ intern.dateOfBirth }}
   </mat-card-content>
   <mat-card-actions>
     <button mat-button routerLink="/edit-intern/{{intern.id}}"><mat-icon>edit</mat-icon></button>
