--- a/interns-app/src/app/components/interns/interns.component.scss
+++ b/interns-app/src/app/components/interns/interns.component.scss
@@ -1,6 +1,6 @@
 .intern-card {
-    max-width: 150px;
-    min-height: 150px;
+    width: 200px;
+    height: 200px;
     margin-top: 25px;
     margin-left: 25px;
     margin-right: 25px;
