Implemented the search by name functionality

--- a/interns-app/src/app/components/home/home.component.html
+++ b/interns-app/src/app/components/home/home.component.html
@@ -1,2 +1,3 @@
-<app-interns></app-interns>
+<app-filter (emitSearchString)="receiveSearchString($event)"></app-filter>
+<app-interns [searchString]="searchString"></app-interns>
 <app-add-tool></app-add-tool>
