--- a/interns-app/src/app/components/filter/filter.component.scss
+++ b/interns-app/src/app/components/filter/filter.component.scss
@@ -5,7 +5,7 @@
     .filter-div {
       margin: 10px;
     }
-    #search-div {
+    .icon-div {
       background-color: rgb(60, 84, 180);
       width: 40px;
       height: 40px;
